--- a/views/partials/Thumbs.jade
+++ b/views/partials/Thumbs.jade
@@ -5,18 +5,22 @@
 
 .row
 
-    .col-md-4.col-sm-6
-        .thumbbox
-            a.centerdiv(href="/bio")
 
 
-    .col-md-4.col-sm-6
-        .thumbbox
-            a.centerdiv(href="/bio")
-                h2 bio
+    .col-md-8.col-sm-8
+        h2 offering
+        p Full-stack web development consulting
 
-    .col-md-4.col-sm-6
-        .thumbbox
-            a.centerdiv(href="/demos")
-                h2 demos
+    //.col-md-4.col-sm-4
+        h2 bio
+        p 5 years experience in business analyst, web dev, financial apps, govt cosnsulting
 
+
+    .col-md-4.col-sm-4
+        h2 contact
+        p email: mattlovan@gmail.com
+        p phone: +1 208 871 2928
+
+
+.row
+    include Demos
