--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,7 @@ html(ng-app="myApp")
         link(rel='stylesheet', href='/css/bootstrap.css')
         link(rel='stylesheet', href='/css/app2.css')
         link(rel='stylesheet', href='/css/3dLogo.css')
+        link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Roboto:300', rel='stylesheet', type='text/css')
         script
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
