--- a/views/partials/Demos.jade
+++ b/views/partials/Demos.jade
@@ -4,15 +4,22 @@
    Time: 8:07 PM
 
 
-.col-lg-offset-2.col-lg-8.col-md-offset-1.col-md-10
-    h2 Demos and posts
+.col-lg-8.col-md-8
+    h2 blog
 
     .panel
-        h3 Redesign
-        p Thanks to <a href="http://tridiv.com/" target='_blank')> tridiv's 3d css creation tool </a> for the sweet 3d css logo in the header background.
-        p I also based the color scheme on this <a href="http://www.colourlovers.com/palette/482774/dream_magnet" target='_blank')> color pallete </a> from Colourlovers.
-        p Of course bootstrap3 deserves a mention as well. <a href="http://getbootstrap.com/" target='_blank')> Bootstrap is a collection of useful css rules and javascript components. </a>
+        h3 Site Redesign
+        p For a web developer with more time than sense, a site redesign is great way to spend a few days. Here are some of the tools and techniques I used on this site:
+        ul
+            li Bootstrap is a great place to start. It is a <a href="http://getbootstrap.com/" target='_blank')> collection of useful css rules and javascript components</a> that was created by developers at Twitter. This site uses bootstrap's scaffolding to adjust the layout based on the width of the user's web browser. Try resizing your browser window to see it in action.
+            li The fonts are provided by <a href="http://www.google.com/fonts"> Google Fonts.</a> This site uses 'Source Sans Pro' for the header and body and 'Roboto' for the sub-headings.
+            li The "ML" logo in the header (hidden on mobile) was created using <a href="http://tridiv.com/" target='_blank')> Tridiv's 3d css creation tool.</a> This allowed me to avoid using any images on this site. Here's the object that I created for my header logo: <a href="http://tridiv.com/d/4cz" target='_blank'> "ML" Logo. </a>
+            li The color scheme is loosely based on <a href="http://www.colourlovers.com/palette/482774/dream_magnet" target='_blank')> a color pallete named 'dream magnet'</a> from user 'lagunabeach' at Colourlovers. This is a great site, especially if you don't know much about color theory and design (like me).
+
+        p I'm pretty happy with the way it turned out. Shoot me an email if you have any questions or comments.
 
     .panel
         h3 Mulitply Game
         p <a href="/grid"> Here </a>
+
+.col-lg-offset-4.col-md-4
