--- a/views/partials/Thumbs.jade
+++ b/views/partials/Thumbs.jade
@@ -1,13 +1,29 @@
 .row
     .col-md-8.col-sm-8
-        h2 offering
-        p Full-stack web development consulting
+        h2 consulting
+
+        h3 full-stack development
+        table.table
+            thead
+            tbody
+                tr
+                    td.text-right front-end
+                    td Angular.js
+
+                tr
+                    td.text-right web server
+                    td Node.js
+
+                tr
+                    td.text-right database
+                    td
+                        ul.list-unstyled
+                            li SQL: SQLServer, Oracle
+                            li NoSQL: MongoDB
+
+
 
     .col-md-4.col-sm-4
         h2 contact
         p email: mattlovan@gmail.com
         p phone: +1 208 871 2928
-
-
-.row
-    include Demos
