--- a/public/css/3dLogo.css
+++ b/public/css/3dLogo.css
@@ -10,7 +10,7 @@
     width:100%;
     height:100%;
     font-size: 175%;
-    opacity: .45;
+    opacity: .5;
     z-index: -1;
 }
 .scene, .shape, .face, .face-wrapper, .cr{
@@ -23,7 +23,12 @@
     transform-style:preserve-3d;
 }
 .scene{
-    margin:6.5em 0 0 11.4em;
+    margin:6.7em 0 0 9.5em;
+    -webkit-transition: all 1.4s ease;
+    -moz-transition:    all 1.4s ease;
+    -o-transition:      all 1.4s ease;
+    -ms-transition:     all 1.4s ease;
+    transition:         all 1.4s ease;
 }
 .shape{
     top:50%;
