--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -19,18 +19,17 @@ a:focus {
     text-decoration: none;
 }
 
+
+
 h1 {
     color: #e7f3f4;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 700;
+    font-size: 72px;
     letter-spacing: .05em;
     text-transform: uppercase;
-    font-size: 72px;
     text-shadow:  1px 1px 24px rgb(54, 63, 62);
     margin-left: 18px;
-    margin-top: 48px;
-    margin-bottom: 96px;
-
 }
 
 h1 small {
@@ -44,12 +43,11 @@ h1 small {
 
 h2 {
     font-family: 'Roboto', sans-serif;
-    font-weight: 300;
     color: #e7f3f4;
 }
 
 h3 {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: #e7f3f4;
 }
 
@@ -58,12 +56,41 @@ p{
     line-height: 1.3em;
 }
 
+/***Header***/
+.header{
+    margin-bottom: 90px;
+}
 
-/*Header stripes*/
 .stripegroup{box-shadow: 1px 1px 24px rgb(54, 63, 62);}
 .twostripe{background-color:#00B4CC;height: 11px;}
 .threestripe{background-color: #008C9E;height: 13px;}
 .fourstripe{background-color: #005F6B;height: 9px;}
+
+.headerButton{
+    color: #e7f3f4;
+    background: rgba(0, 0, 0, 0.2);
+    border: solid 1px rgba(0, 0, 0, 0.1);
+    margin-left: 18px;
+    padding: 5px 15px;
+    white-space: pre;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+}
+
+.headerButton:hover{
+    color: #e7f3f4;
+    background: rgba(0, 0, 0, 0.2);
+    border: solid 1px rgba(231, 243, 244, 0.74);
+    margin-left: 18px;
+    padding: 5px 15px;
+    white-space: pre;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+}
+
+.active{
+    border: solid 1px rgba(231, 243, 244, 0.85);
+}
 
 .panel{
     padding: 0 20px 20px 20px;
@@ -136,13 +163,10 @@ p{
  The animate-enter prefix is the event name that you
  have provided within the ngAnimate attribute.
 */
-.animate-enter-setup {
-    -webkit-transition: 0.25s linear all; /* Safari/Chrome */
-    -moz-transition: 0.25s linear all; /* Firefox */
-    -ms-transition: 0.25s linear all; /* IE10 */
-    -o-transition: 0.25s linear all; /* Opera */
-    transition: .25s linear all; /* Future Browsers */
-
-    /* The animation preparation code */
-    opacity: 0;
+.animate{
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
