--- a/views/partials/page/3dLogo.jade
+++ b/views/partials/page/3dLogo.jade
@@ -1,5 +1,5 @@
 |<div id="tridiv">
-|    <div class="scene" style="-webkit-transform: rotateY(60deg); -moz-transform: rotateY(60deg); -ms-transform:rotateY(60deg); transform: rotateY(60deg); ">
+|    <div class="scene" ng-style="spinLogo()">
 |        <div class="shape cuboid-1 cub-1">
 |            <div class="face ft">
 |                <div class="photon-shader" style="background-color: rgba(255, 255, 255, 0.286275);"></div>
