--- a/views/partials/Blog.jade
+++ b/views/partials/Blog.jade
@@ -4,7 +4,7 @@
     .panel
         h3 Site Redesign
             small  9/18/2013
-        p For a web developer with more time than sense, a site redesign is great way to spend a few days. Here are some of the tools and techniques I used on this site:
+        p Here are some of the tools and techniques I used on this site:
         ul
             li Bootstrap is a great place to start. It is a <a href="http://getbootstrap.com/" target='_blank')> collection of useful css rules and javascript components</a> that was created by developers at Twitter. This site uses bootstrap's scaffolding to adjust the layout based on the width of the user's web browser. Try resizing your browser window to see it in action.
             li The fonts are provided by <a href="http://www.google.com/fonts" target='_blank'> Google Fonts.</a> This site uses 'Source Sans Pro' for the header and body and 'Roboto' for the sub-headings.
