--- a/public/css/3dLogo.css
+++ b/public/css/3dLogo.css
@@ -9,8 +9,8 @@
     overflow:hidden;
     width:100%;
     height:100%;
-    font-size: 175%;
-    opacity: .5;
+    font-size: 275%;
+    opacity: .25;
     z-index: -1;
 }
 .scene, .shape, .face, .face-wrapper, .cr{
@@ -23,7 +23,8 @@
     transform-style:preserve-3d;
 }
 .scene{
-    margin:6.7em 0 0 9.5em;
+    height: 100%;
+    width: 100%;
     -webkit-transition: all 1.4s ease;
     -moz-transition:    all 1.4s ease;
     -o-transition:      all 1.4s ease;
