--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -60,12 +60,12 @@ p{
 .header{
     margin-bottom: 90px;
 }
-
+ /*Stripes*/
 .stripegroup{box-shadow: 1px 1px 24px rgb(54, 63, 62);}
 .twostripe{background-color:#00B4CC;height: 11px;}
 .threestripe{background-color: #008C9E;height: 13px;}
 .fourstripe{background-color: #005F6B;height: 9px;}
-
+ /*Header nav buttons*/
 .headerButton{
     color: #e7f3f4;
     background: rgba(0, 0, 0, 0.2);
@@ -76,7 +76,6 @@ p{
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
 }
-
 .headerButton:hover{
     color: #e7f3f4;
     background: rgba(0, 0, 0, 0.2);
@@ -87,41 +86,36 @@ p{
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
 }
-
 .active{
     border: solid 1px rgba(231, 243, 244, 0.85);
 }
 
+
+/*Multiply Game*/
 .panel{
     padding: 0 20px 20px 20px;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.35);
     border: solid 1px #00B4CC;
     border-radius: 0;
 }
-
 .strategyPanel{
     background: rgba(0, 0, 0, 0.25);
     border-radius: 5px;
 }
-
 .strategyTableWrap{
     padding: 20px;
 }
-
 .term{
     text-align: center;
 }
-
 .form-group {
     margin-right: 10px;
 }
-
 .gridbox{
     position: relative;
     height: 100px;
   }
-
- .gridpanel{
+.gridpanel{
      position: absolute;
      bottom: 0;
      top: 0;
@@ -131,7 +125,6 @@ p{
      height: 45px;
      width: 45px;
     }
-
 .gridCell{
     position: absolute;
     width: 20px;
@@ -147,14 +140,12 @@ p{
     -ms-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
-
 .symbol{
     vertical-align: middle;
     text-align: center;
     font-size: 20px;
 
 }
-
 .has-error > input{
     background-color: #ffd8de;
 }
