--- a/views/index.jade
+++ b/views/index.jade
@@ -21,7 +21,7 @@ html(ng-app="myApp")
 
         include partials/page/Header
 
-        .container.appContainer
+        .container
             div(ng-view, class="animate")
 
         script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js')
