remove contacts from consulting

--- a/views/partials/Thumbs.jade
+++ b/views/partials/Thumbs.jade
@@ -23,7 +23,5 @@
 
 
 
-    .col-md-4.col-sm-4
-        h2 contact
-        p email: mattlovan@gmail.com
-        p phone: +1 208 871 2928
+    .col-md-offset-4.col-sm-offset-4
+
