--- a/views/partials/Consulting.jade
+++ b/views/partials/Consulting.jade
@@ -8,7 +8,12 @@
             tbody
                 tr
                     td.text-right front-end
+                    td something
                     td Angular.js
+                tr
+                    td
+                    td
+                    td html5
 
                 tr
                     td.text-right web server
@@ -24,4 +29,3 @@
 
 
     .col-md-offset-4.col-sm-offset-4
-
