--- a/views/partials/Consulting.jade
+++ b/views/partials/Consulting.jade
@@ -1,31 +1,36 @@
 .row
+    .col-md-offset-2.col-sm-offset-2
+
     .col-md-8.col-sm-8
         h2 consulting
+        .panel
+            h3 full-stack development
 
-        h3 full-stack development
-        table.table
-            thead
-            tbody
-                tr
-                    td.text-right front-end
-                    td something
-                    td Angular.js
-                tr
-                    td
-                    td
-                    td html5
+            table.table
+                thead
+                tbody
+                    tr
+                        td.text-right front-end
+                        td something
+                        td Angular.js
+                    tr
+                        td
+                        td
+                        td html5
 
-                tr
-                    td.text-right web server
-                    td Node.js
+                    tr
+                        td.text-right web server
+                        td Node.js
 
-                tr
-                    td.text-right database
-                    td
-                        ul.list-unstyled
-                            li SQL: SQLServer, Oracle
-                            li NoSQL: MongoDB
+                    tr
+                        td.text-right database
+                        td
+                        td SQLServer, Oracle
+                    tr
+                        td
+                        td
+                        td NoSQL: MongoDB
 
 
 
-    .col-md-offset-4.col-sm-offset-4
+    .col-md-offset-2.col-sm-offset-2
