--- a/views/partials/Consulting.jade
+++ b/views/partials/Consulting.jade
@@ -4,32 +4,33 @@
     .col-md-8.col-sm-8
         h2 consulting
         .panel
-            h3 full-stack development
+            h3 offering full-stack web development
 
             table.table
                 thead
                 tbody
                     tr
-                        td.text-right front-end
-                        td something
-                        td Angular.js
+                        td.text-right.tableHeader front-end
+                        td Fast, responsive web applications
+                        td
+                            ul.list-unstyled
+                                li Angular.js
+                                li CSS3
+                                li html5
                     tr
-                        td
-                        td
-                        td html5
+                        td.text-right.tableHeader web server
+                        td Embrace Asynchronos, Web Sockets
+                        td Node, Express, Passport, socket.io
 
                     tr
-                        td.text-right web server
-                        td Node.js
+                        td.text-right.tableHeader database
+                        td choose the right tool for the job
+                        td
+                            ul.list-unstyled
+                                li SQL: Postgres, SQLServer, Oracle
+                                li NoSQL: MongoDB,
+                                    em  Firebase!
 
-                    tr
-                        td.text-right database
-                        td
-                        td SQLServer, Oracle
-                    tr
-                        td
-                        td
-                        td NoSQL: MongoDB
 
 
 
