--- a/views/partials/Demos.jade
+++ b/views/partials/Demos.jade
@@ -1,1 +1,10 @@
 h2 Demos
+
+.col-lg-4.col-md-4
+    .panel
+        h3 Mulitply Game
+            small  9/15/2013
+        p <a href="/grid"> Here </a>
+
+
+.col-lg-offset-8.col-md-8
