--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -161,6 +161,16 @@ p{
  The animate-enter prefix is the event name that you
  have provided within the ngAnimate attribute.
 */
+
+.btn-group{
+    margin-bottom: 7px;
+}
+
+.shade{
+    color: #00B4CC;
+}
+
+
 .animate{
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
