--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
 !!!
-html(ng-app="myApp")
+html(ng-app="mattLovan")
     head
         meta(charset='utf8', name="viewport", content="width=device-width, initial-scale=1.0")
         base(href='/')
@@ -28,3 +28,4 @@ html(ng-app="myApp")
         script(src='js/app.js')
         script(src='js/controllers.js')
         script(src='js/directives.js')
+        script(src='js/services.js')
