add leaderboard to demos

--- a/views/partials/Demos.jade
+++ b/views/partials/Demos.jade
@@ -1,10 +1,15 @@
 h2 Demos
 
-.col-lg-4.col-md-4
+.col-lg-5.col-md-5
     .panel
-        h3 Mulitply Game
+        h3 Mulitply Game (in progress)
             small  9/15/2013
-        p <a href="/grid"> Here </a>
+        p <a href="/grid"> Practice multiplication </a>
+
+    .panel
+        h3 Stableford leaderboard
+            small  9/21/2013
+        p <a href="/leaderboard"> PGA leaderboard that computes 4 different scoring styles </a>
 
 
-.col-lg-offset-8.col-md-8
+.col-lg-offset-7.col-md-7
