--- a/views/partials/leaderboard.jade
+++ b/views/partials/leaderboard.jade
@@ -18,7 +18,7 @@ div.span12(ng-controller="leaderboardCtrl")
                 button.btn.btn-success(ng-click="setScoringStyle('stable')", ng-class="{active: scoring == 'stable'}") Stableford
                 button.btn.btn-success(ng-click="setScoringStyle('modstable')", ng-class="{active: scoring == 'modstable'}") Modified Stableford
 
-            table.table.table-bordered
+            table.table.table-bordered.text-center
                 thead.shade
                     th Hole
                     th 1
