--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -70,9 +70,9 @@ p{
     font-size: 20px;
 }
 .headerButton:hover{
-    color: #e7f3f4;
+    color: white;
     background: rgba(0, 0, 0, 0.2);
-    border: solid 1px rgba(231, 243, 244, 0.74);
+    border: solid 1px white;
     margin-left: 18px;
     padding: 5px 15px;
     white-space: pre;
@@ -80,7 +80,7 @@ p{
     font-size: 20px;
 }
 .active{
-    border: solid 1px rgba(231, 243, 244, 0.85);
+    border: solid 1px white;
 }
 
 
