redo layout, move to side h2 title

--- a/views/partials/Blog.jade
+++ b/views/partials/Blog.jade
@@ -1,7 +1,10 @@
-.col-lg-8.col-md-8
-    h2 blog
+.row
+    .col-sm-1
 
-    .panel
+    .col-sm-3
+        h2.shade blog
+
+    .panel.col-sm-8
         h3 Site Redesign
             small  9/18/2013
         p Here are some of the tools and techniques I used on this site:
@@ -10,12 +13,18 @@
             li The fonts are provided by <a href="http://www.google.com/fonts" target='_blank'> Google Fonts.</a> This site uses 'Source Sans Pro' for the header and body and 'Roboto' for the sub-headings.
             li The "ML" logo in the header (hidden on mobile) was created using <a href="http://tridiv.com/" target='_blank')> Tridiv's 3d css creation tool.</a> This allowed me to avoid using any images on this site. Here's the object that I created for my header logo: <a href="http://tridiv.com/d/4cz" target='_blank'> "ML" Logo. </a>
             li The color scheme is loosely based on <a href="http://www.colourlovers.com/palette/482774/dream_magnet" target='_blank')> a color pallete named 'dream magnet'</a> from user 'lagunabeach' at Colourlovers. This is a great site, especially if you don't know much about color theory and design (like me).
-
         p I'm pretty happy with the way it turned out. Shoot me an email if you have any questions or comments.
 
-    .panel
+        .clearfix
+
+.row
+    .col-sm-1
+
+    .col-sm-3
+
+    .panel.col-sm-8
         h3 Mulitply Game
             small  9/15/2013
         p <a href="/grid"> Here </a>
 
-.col-lg-offset-4.col-md-4
+        .clearfix
