--- a/views/partials/Demos.jade
+++ b/views/partials/Demos.jade
@@ -1,15 +1,15 @@
-h2 Demos
+.row
+    .col-sm-1
 
-.col-lg-5.col-md-5
-    .panel
+    .col-sm-3
+        h2.shade demos
+
+    .panel.col-sm-8
+
         h3 Mulitply Game (in progress)
             small  9/15/2013
         p <a href="/grid"> Practice multiplication </a>
 
-    .panel
         h3 Stableford leaderboard
             small  9/21/2013
         p <a href="/leaderboard"> PGA leaderboard that computes 4 different scoring styles </a>
-
-
-.col-lg-offset-7.col-md-7
