--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -11,14 +11,12 @@ a {
     border-bottom: solid 1px  #00C0DD;
     padding-bottom: 1px;
 }
-
 a:hover,
 a:focus {
     color: #008C9E;
     border-bottom: solid 1px  #008C9E;
     text-decoration: none;
 }
-
 
 
 h1 {
@@ -41,8 +39,24 @@ h1 small {
     color: #00B4CC;
 }
 
+h1.mobile {
+    font-size: 40px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+
+
+
 h2, h3 {
     font-family: 'Roboto', sans-serif;
+}
+h2 small {
+    white-space: pre;
+}
+
+h3 {
+    margin-top: 26px;
 }
 
 p{
@@ -50,41 +64,58 @@ p{
 }
 
 /***Header***/
-.header{
-    margin-bottom: 90px;
-}
- /*Stripes*/
 .stripegroup{box-shadow: 1px 1px 24px rgb(54, 63, 62);}
 .twostripe{background-color:#00B4CC;height: 11px;}
 .threestripe{background-color: #008C9E;height: 13px;}
 .fourstripe{background-color: #005F6B;height: 9px;}
+
  /*Header nav buttons*/
 .headerButton{
-    color: #e7f3f4;
+    color: white;
     background: rgba(0, 0, 0, 0.2);
     border: solid 1px rgba(0, 0, 0, 0.1);
-    margin-left: 18px;
     padding: 5px 15px;
     white-space: pre;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
+    border-radius: 0;
 }
 .headerButton:hover{
     color: white;
-    background: rgba(0, 0, 0, 0.2);
     border: solid 1px white;
-    margin-left: 18px;
-    padding: 5px 15px;
-    white-space: pre;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
 }
 .active{
     border: solid 1px white;
 }
 
 
-/*Multiply Game*/
+.navbar{
+    background: transparent;
+    border: none;
+}
+.navbar-default .navbar-nav > li > a{
+    color: inherit;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+    color: inherit;
+    background-color: inherit;
+}
+
+.navbar-nav > li {
+    margin: 7px;
+}
+
+.navbar-nav {
+    margin: inherit;
+}
+
+
+
+
 .panel{
     padding: 0 20px 20px 20px;
     background: rgba(31, 56, 63, 0.8);
@@ -92,19 +123,26 @@ p{
     border-radius: 0;
 }
 
-.tableHeader{
-    /*white-space: pre;*/
+.table tbody > tr > th{
     font-family: 'Roboto', sans-serif;
-    /*text-transform: none;*/
-    /*text-shadow: none;*/
-    /*letter-spacing: 0;*/
     color: #00B4CC;
-    font-size: 1.3em;
+    font-size: 24px;
+    padding: 20px 40px;
+    font-weight: normal;
+    white-space: pre;
+}
+
+.table tbody > tr > td{
+    padding: 20px 24px 20px 0;
+
+}
+
+.glyphicon{
+    margin: 2px 10px 2px 0;
 }
 
 
-
-
+/*Multiply Game*/
 .strategyPanel{
     background: rgba(0, 0, 0, 0.25);
     border-radius: 5px;
@@ -168,13 +206,6 @@ p{
 
 .shade{
     color: #00B4CC;
-}
-
-
-.animate{
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+    text-align: right;
+    padding-right: 5px;
 }
