--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,6 @@ html(ng-app="mattLovan")
         meta(charset='utf8', name="viewport", content="width=device-width, initial-scale=1.0")
         base(href='/')
         title Matt Lovan
-
         link(rel='stylesheet', href='/css/bootstrap.css')
         link(rel='stylesheet', href='/css/app2.css')
         link(rel='stylesheet', href='/css/3dLogo.css')
@@ -22,10 +21,11 @@ html(ng-app="mattLovan")
         include partials/page/Header
 
         .container
-            div(ng-view, class="animate")
+            div(ng-view)
 
         script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js')
         script(src='js/app.js')
         script(src='js/controllers.js')
         script(src='js/directives.js')
         script(src='js/services.js')
+        script(src='js/filters.js')
