--- a/views/partials/Consulting2.jade
+++ b/views/partials/Consulting2.jade
@@ -1,10 +1,8 @@
 .row
-    .col-sm-1
-
     .col-sm-3
         h2.shade web applications
 
-    .panel.col-sm-8
+    .col-sm-6
         h3 create a desktop experience
         p
             span.glyphicon.glyphicon-fire
@@ -14,14 +12,19 @@
             span.glyphicon.glyphicon-stats
             | Create rich interactions to explore data
 
+        p
+            button.btn.headerButton View Demos
+
         .clearfix
 
+    .col-sm-3
+
+
 .row
-    .col-sm-1
     .col-sm-3
         h2.shade web servers
 
-    .panel.col-sm-8
+    .col-sm-8
         h3 work in the cloud
 
         p
@@ -36,14 +39,13 @@
             | Exchange data with existing systems and services
 
         .clearfix
-
+    .col-sm-1
 
 .row
-    .col-sm-1
     .col-sm-3
         h2.shade cloud databases
 
-    .panel.col-sm-8
+    .col-sm-8
         h3 grow to fit your data
 
         p
@@ -54,3 +56,5 @@
             |  NoSQL: MongoDB, Firebase!
 
         .clearfix
+
+    .col-sm-1
