--- a/views/partials/Demos.jade
+++ b/views/partials/Demos.jade
@@ -1,10 +1,7 @@
 .row
-    .col-sm-1
 
-    .col-sm-3
-        h2.shade demos
 
-    .panel.col-sm-8
+    .panel.col-sm-4
 
         h3 Mulitply Game (in progress)
             small  9/15/2013
@@ -12,4 +9,13 @@
 
         h3 Stableford leaderboard
             small  9/21/2013
-        p <a href="/leaderboard"> PGA leaderboard that computes 4 different scoring styles </a>
+        p
+            a(href="/leaderboard")
+            | PGA leaderboard that computes 4 different scoring styles </a>
+
+
+
+    .col-sm-3
+        h2.shade demos
+
+    .col-sm-5
