--- a/views/index.jade
+++ b/views/index.jade
@@ -18,7 +18,7 @@ html(ng-app="mattLovan")
 
     body
 
-        include partials/page/Header
+        include partials/header/Header
 
         .container
             div(ng-view)
@@ -29,3 +29,4 @@ html(ng-app="mattLovan")
         script(src='js/directives.js')
         script(src='js/services.js')
         script(src='js/filters.js')
+        script(src='js/lib/AngularUI.js')
