--- a/views/partials/header/Header.jade
+++ b/views/partials/header/Header.jade
@@ -23,6 +23,14 @@ div.header(ng-controller="navigationCtrl")
             li
                 a.btn.headerButton(href="/blog", ng-class="{active: location.path() == '/blog'}") blog
             li
-                a.btn.headerButton(href="/demos", ng-class="{active: location.path() == '/demos'}") demos
-            li
                 a.btn.headerButton(href="/contact", ng-class="{active: location.path() == '/contact'}") contact
+            li
+                a.btn.headerButton.dropdown-toggle demos
+                ul.dropdown-menu
+                    li
+                        a.btn(href="/leaderboard") PGA leaderboard
+                    li
+                        a.btn(href="/grid") Multiply game
+
+
+
