update consulting page. add spinning gif, lighten opacity

--- a/views/partials/Consulting2.jade
+++ b/views/partials/Consulting2.jade
@@ -1,59 +1,67 @@
 .row
     .col-sm-3
-        h2.shade web applications
+        h2.shade background
 
-    .col-sm-6
-        h3 create a desktop experience
+    .col-sm-8
+        h3 government consulting
         p
-            span.glyphicon.glyphicon-fire
-            |  intuitive applications that work on all platforms and devices
-
-        p
-            span.glyphicon.glyphicon-stats
-            | Create rich interactions to explore data
+            span.glyphicon.glyphicon-tower
+            |  6 years of experience implementing financial systems for government revenue agencies
 
         p
-            button.btn.headerButton View Demos
+            span.glyphicon.glyphicon-user
+            |  3 years of experience  as technical lead implementing web applications to file and pay taxes
+
+            dl.dl-horizontal
+                dt eTaxBC
+                dd British Columbia Ministry of Finance - $100+ million collected each year
+
+            dl.dl-horizontal
+                dt My Alabama Taxes
+                dd Alabama Department of Revenue - $500+ million collected each year
 
         .clearfix
 
-    .col-sm-3
+    .col-sm-1
 
 
 .row
     .col-sm-3
-        h2.shade web servers
+        h2.shade current projects
 
     .col-sm-8
-        h3 work in the cloud
+        h3 chasing all the coolest buzzwords
 
         p
-            span.glyphicon.glyphicon-cloud
-            |   Deploy quickly and scale instantly
+            span.glyphicon.glyphicon-star
+            |   Angular.js - fast, modular framework for web applications
 
         p
-            span.glyphicon.glyphicon-user
-            | Create users and passwords - or login with Facebook, Twitter, and more
+            span.glyphicon.glyphicon-refresh
+            | Node.js - Event-based web server, deployed in the cloud
         p
-            span.glyphicon.glyphicon-transfer
-            | Exchange data with existing systems and services
+            span.glyphicon.glyphicon-fire
+            | NoSQL databases, and even better - Firebase
 
         .clearfix
     .col-sm-1
 
 .row
     .col-sm-3
-        h2.shade cloud databases
+        h2.shade consulting services
 
     .col-sm-8
-        h3 grow to fit your data
+        h3 full-stack web development consulting
 
         p
-            span.glyphicon.glyphicon-list
-            |  SQL: Postgres, SQLServer, Oracle
+            span.glyphicon.glyphicon-leaf
+            |  Intuitive interfaces that work on all devices
         p
-            span.glyphicon.glyphicon-list-alt
-            |  NoSQL: MongoDB, Firebase!
+            span.glyphicon.glyphicon-cloud
+            |  Cloud-based web servers that are cheap to deploy and scale infinitely
+        p
+            span.glyphicon.glyphicon-file
+            |   Open-source databases powering cloud storage
 
         .clearfix
 
