change meta tag

--- a/views/partials/header/Header.jade
+++ b/views/partials/header/Header.jade
@@ -9,13 +9,13 @@ div.header(ng-controller="navigationCtrl")
         .fourstripe
 
     h1.visible-md.visible-sm.visible-lg Matt Lovan
-        small  web development
+        small  web developer
 
     nav.navbar.navbar-default(role='navigation')
 
         .navbar-header
             h1.mobile.visible-xs Matt Lovan
-                small  web development
+                small  web developer
 
         ul.nav.navbar-nav
             li
