--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,8 @@
 !!!
 html(ng-app="mattLovan")
     head
-        meta(charset='utf8', name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(charset='utf8')
         base(href='/')
         title Matt Lovan
         link(rel='stylesheet', href='/css/bootstrap.css')
