--- a/views/partials/demos/Grid.jade
+++ b/views/partials/demos/Grid.jade
@@ -53,6 +53,6 @@ form(name="termForm", rc-submit="buildGrid()").form-inline
                         .glyphicon.glyphicon-check
 
                 .alert(ng-show="wrongAnswer") Wrong Answer!
-                .alert.term(ng-show="tooMany") Too Many!
+                .alert(ng-show="tooMany") Too Many!
 
             h2(ng-show="complete")  &#x2714; Complete!
