--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -212,7 +212,7 @@ td > button {
 
 .term{
     text-align: center;
-    background: inherit;
+    background-color: rgba(0,0,0,0);
     color: white;
     border: dashed 1px white;
     padding: 10px;
@@ -272,7 +272,7 @@ td > button {
 }
 
 .glyphicon{
-    margin-right: 5px;
+    margin-right: 4px;
 }
 .symbol{
     vertical-align: middle;
