--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -230,6 +230,15 @@ td > button {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 180, 204, 0.6);
 }
 
+.gridDim{
+    color: white;
+    position: absolute;
+    font-size: 24px;
+    padding: 5px 10px;
+    border-radius: 24px;
+    min-width: 50px;
+    text-align: center;
+}
 .gridbox{
     position: relative;
  }
