--- a/views/partials/demos/Grid.jade
+++ b/views/partials/demos/Grid.jade
@@ -1,4 +1,5 @@
 h2 Multiply game
+    small  break problems to pieces
 
 form(name="termForm", rc-submit="buildGrid()").form-inline
     .form-group(ng-class=" {'has-error': termForm.columnCount.$invalid} ")
@@ -19,16 +20,20 @@ form(name="termForm", rc-submit="buildGrid()").form-inline
     .row
         div.col-sm-6
             h3 grid
-            div.progress.progress-striped(ng-show="grid")
-                div.progress-bar(ng-repeat="factor in strategy.factors", role='progressbar', aria-valuenow='{{factor.percentage}}', aria-valuemin='0', aria-valuemax='100', style='width: {{factor.percentage}}%;', ng-class="factor.colorGroup")
-                    div.sr-only progress: {{factor.percentage}}%
 
             div.gridbox(ng-style="gridBoxSize")
                 .gridpanel(ng-style="gridPanelSize")
+                    div.gridDim(ng-style="yDim") {{y}}
+                    div.gridDim(ng-style="xDim") {{x}}
                     .gridCell(ng-repeat="cell in grid", ng-style="cell.style", ng-class="cell.group")
 
         div.col-sm-6
             h3 factors
+
+            div.progress.progress-striped(ng-show="grid")
+                div.progress-bar(ng-repeat="factor in strategy.factors", role='progressbar', aria-valuenow='{{factor.percentage}}', aria-valuemin='0', aria-valuemax='100', style='width: {{factor.percentage}}%;', ng-class="factor.colorGroup")
+                    div.sr-only progress: {{factor.percentage}}%
+
             ol.list-unstyled
                 li.factorBlock(ng-repeat="factor in strategy.factors")
                     span.coin(ng-class="factor.colorGroup")
