--- a/views/index.jade
+++ b/views/index.jade
@@ -9,13 +9,7 @@ html(ng-app="mattLovan")
         link(rel='stylesheet', href='/css/app2.css')
         link(rel='stylesheet', href='/css/3dLogo.css')
         link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Roboto:300', rel='stylesheet', type='text/css')
-        script
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-            ga('create', 'UA-40720061-1', 'herokuapp.com');
-            ga('send', 'pageview');
+
 
     body
 
@@ -24,10 +18,19 @@ html(ng-app="mattLovan")
         .container
             div(ng-view)
 
-        script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js')
+        script(src='js/lib/Angular1.2.js')
+        script(src='js/lib/ngRoute.js')
+        script(src='js/lib/ngAnimate.js')
+        script(src='js/lib/AngularUI.js')
         script(src='js/app.js')
         script(src='js/controllers.js')
         script(src='js/directives.js')
         script(src='js/services.js')
         script(src='js/filters.js')
-        script(src='js/lib/AngularUI.js')
+        script
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-40720061-1', 'herokuapp.com');
+          ga('send', 'pageview');
