--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,7 @@ html(ng-app="mattLovan")
         include partials/header/Header
 
         .container
-            div(ng-view)
+            div.mainView(ng-view)
 
         script(src='js/lib/Angular1.2.js')
         script(src='js/lib/ngRoute.js')
