add shading to consulting dt

--- a/views/partials/Consulting2.jade
+++ b/views/partials/Consulting2.jade
@@ -13,12 +13,12 @@
             |  3 years of experience  as technical lead implementing web applications to file and pay taxes
 
             dl.dl-horizontal
-                dt eTaxBC
-                dd British Columbia Ministry of Finance - $100+ million collected each year
+                dt.shade eTaxBC
+                dd portal for the British Columbia Ministry of Finance - $100+ million collected each year
 
             dl.dl-horizontal
-                dt My Alabama Taxes
-                dd Alabama Department of Revenue - $500+ million collected each year
+                dt.shade My Alabama Taxes
+                dd portal for the Alabama Department of Revenue - $500+ million collected each year
 
         .clearfix
 
