tune logo, adjust consulting language

--- a/views/partials/Consulting2.jade
+++ b/views/partials/Consulting2.jade
@@ -2,7 +2,7 @@
     .col-sm-3
         h2.shade background
 
-    .col-sm-8
+    .col-sm-8.panel
         h3 government consulting
         p
             span.glyphicon.glyphicon-tower
@@ -29,12 +29,12 @@
     .col-sm-3
         h2.shade current projects
 
-    .col-sm-8
+    .col-sm-8.panel
         h3 chasing all the coolest buzzwords
 
         p
             span.glyphicon.glyphicon-star
-            |   Angular.js - fast, modular framework for web applications
+            |   Angular.js - a fast, modular framework for web applications
 
         p
             span.glyphicon.glyphicon-refresh
@@ -50,18 +50,18 @@
     .col-sm-3
         h2.shade consulting services
 
-    .col-sm-8
+    .col-sm-8.panel
         h3 full-stack web development consulting
 
         p
             span.glyphicon.glyphicon-leaf
-            |  Intuitive interfaces that work on all devices
+            |   Intuitive interfaces
         p
             span.glyphicon.glyphicon-cloud
-            |  Cloud-based web servers that are cheap to deploy and scale infinitely
+            |   Web servers deployed in the cloud
         p
             span.glyphicon.glyphicon-file
-            |   Open-source databases powering cloud storage
+            |   Open-source databases
 
         .clearfix
 
