--- a/public/css/3dLogo.css
+++ b/public/css/3dLogo.css
@@ -26,12 +26,12 @@
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
     filter: alpha(opacity=20);
     opacity: .2;
-
-    -webkit-transition: all 1.4s ease;
-    -moz-transition:    all 1.4s ease;
-    -o-transition:      all 1.4s ease;
-    -ms-transition:     all 1.4s ease;
-    transition:         all 1.4s ease;
+    font-size: 75%;
+    -webkit-transition: all 1.1s ease;
+    -moz-transition:    all 1.1s ease;
+    -o-transition:      all 1.1s ease;
+    -ms-transition:     all 1.1s ease;
+    transition:         all 1.1s ease;
 }
 
 .shape {
