--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -74,9 +74,6 @@ p{
 input::-webkit-inner-spin-button {
     display: none;
 }
-.row{
-    margin-bottom: 30px;
-}
 
 /***Header***/
 .stripegroup{box-shadow: 1px 1px 24px rgb(54, 63, 62);}
@@ -447,11 +444,11 @@ td > button {
 /*Animate*/
 .mainView.ng-enter {
     opacity: 0;
-    -webkit-transition-duration: 1s;
-    -webkit-transition-delay: 0.4s;
+    -webkit-transition-duration: .8s;
+    -webkit-transition-delay: 0.3s;
     -webkit-transition-timing-function: ease;
-    transition-duration: 1s;
-    transition-delay: 0.4s;
+    transition-duration: .8s;
+    transition-delay: 0.3s;
     transition-timing-function: ease;
 }
 
