fix leaderboard buttons

--- a/views/partials/demos/leaderboard.jade
+++ b/views/partials/demos/leaderboard.jade
@@ -115,12 +115,7 @@ div.span12()
                         td {{$eval('player.h.h[17].' + $parent.scoring) }}
                         td {{$eval('player.' + $parent.scoring)}}
 
-                    // player.standardTotal
-                    // stablefordTotal
-                    // modStablefordTotal
-                    //tp
-
-            ul.inline.unstyled
+            ul.list-inline.list-unstyled
                 li
                     |Use the search box to find a golfer, or
                 li
