fix leaderboard buttons

--- a/views/partials/Contact.jade
+++ b/views/partials/Contact.jade
@@ -1,4 +1,12 @@
 
 h2 contact
-p email: mattlovan@gmail.com
-p phone: +1 208 871 2928
+
+p
+  span.glyphicon.glyphicon-envelope
+  label.sr-only Email:
+  |  mattlovan@gmail.com
+
+p
+  span.glyphicon.glyphicon-earphone
+  label.sr-only Phone:
+  |  +1 208 871 2928
