Add Boise food truck tweet view and map

--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -297,6 +297,13 @@ td > button {
     padding-right: 5px;
 }
 
+.map{
+    margin-top: 20px;
+    height: 500px;
+}
+
+
+
 
 /*____Loading Spinner*/
 .wrapperloading {
