--- a/views/partials/header/Header.jade
+++ b/views/partials/header/Header.jade
@@ -39,6 +39,8 @@ div.header(ng-controller="navigationCtrl")
                         ul.list-unstyled
                             li
                                 a.btn(href="/leaderboard") PGA leaderboard
+                            li
+                                a.btn(href="/maps") Boise Food Truck Tweet Map
 
 
 
