--- a/views/index.jade
+++ b/views/index.jade
@@ -16,7 +16,7 @@ html(ng-app="mattLovan")
         include partials/header/Header
 
         .container
-            div.mainView(ng-view)
+            div(ng-view)
 
         script(src='js/lib/Angular1.2.js')
         script(src='js/lib/ngRoute.js')
@@ -27,6 +27,11 @@ html(ng-app="mattLovan")
         script(src='js/directives.js')
         script(src='js/services.js')
         script(src='js/filters.js')
+
+        script(src='//maps.googleapis.com/maps/api/js?sensor=false')
+        script(src='//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js')
+        script(src='//angulargm.herokuapp.com/angular-gm-0.2.0.min.js')
+
         script
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
