adjust map, center on Boise

--- a/views/partials/demos/maps.jade
+++ b/views/partials/demos/maps.jade
@@ -4,5 +4,11 @@
 
 .col-md-4
   h2 Boise Food Truck Tweets
-  slider(floor="0", ceiling="30", step="1", precision="1")
   h4 Coming soon...
+  slider(floor="0", ceiling="30", step="1", precision="1")
+
+
+  .panel
+    h3 Current Map:
+    p Lat: {{centerLat}}
+    p Lng: {{centerLng}}
